--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
-  text-align: center;
+  text-align: left;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .App-logo {
